# sizebased_img_compress

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-app.yml  python-app.yml  test.yml
cli/: __main__.py
gui/: __main__.py
sizebased_compress_lib/: smart_compress.py  wip_loss_less.py
sizebased_img_compress/: smart_compress.py
tests/: test_gui.py  test_main.py
